# pwa-games

./: .gitignore  CLAUDE.md  NEXT.md  PLAN.md  README.md  TESTING.md  TODO.md  index.html  package-lock.json  package.json  playwright.config.ts  pwa-assets.config.ts  pyproject.toml  requirements.txt  setup.sh  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/skills/dc-clean/: SKILL.md
.claude/skills/dc-diag/: SKILL.md
.claude/skills/dc-down/: SKILL.md
.claude/skills/dc-logs/: SKILL.md
.claude/skills/dc-ps/: SKILL.md
.claude/skills/dc-run/: SKILL.md
.claude/skills/dc-shell/: SKILL.md
.claude/skills/dc-test/: SKILL.md
.claude/skills/dc-up/: SKILL.md
src/: main.ts  router.ts  style.css
src/games/: registry.ts  types.ts
src/games/klondike/: cards.ts  index.ts  logic.ts  meta.ts
src/games/sudoku/: index.ts  logic.ts  meta.ts
src/games/tictactoe/: index.ts  logic.ts  meta.ts
src/lib/: storage.ts  theme.ts
src/ui/: header.ts  menu.ts
tests/: klondike.spec.ts  pwa.spec.ts  router.spec.ts  smoke.spec.ts  storage.spec.ts  sudoku.spec.ts  theme.spec.ts  tictactoe.spec.ts
tools/: devctl.toml  docker-compose.yml
tools/cli/devctl/: __init__.py  __main__.py  capture.py  config.py  manifest.py  paths.py
tools/cli/devctl/commands/: __init__.py  capture.py  clean.py  compose.py  logs.py  peek.py  ps.py  run.py  shell.py  show_tree.py  test.py
tools/docker/: Dockerfile.dev
tools/scripts/: _bootstrap.sh  capture  clean  compose  logs  peek  ps  run  shell  show-tree  test
